--- a/vividbot/data/task/llava_pretrain_refined/test.ipynb
+++ b/vividbot/data/task/llava_pretrain_refined/test.ipynb
@@ -25,14 +25,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab039aea6da040428dde667d8bef7108",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "from pathlib import Path\n",
     "\n",
-    "metadatas = load_dataset(\"json\", data_files=f\"{Path.home()}/data/llava-pretrain/llava_pretrain_en.jsonl\", split=\"train\")"
+    "metadatas = load_dataset(\"json\", data_files=f\"{Path.home()}/data/llava-pretrain/llava_pretrain_vi.jsonl\", split=\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "207549"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadatas.num_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3f65d739bd9476e9e3be3c0ff05a8a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/182800 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['id', 'image', 'conversations'],\n",
+       "    num_rows: 1\n",
+       "})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadatas.filter(lambda x: x[\"id\"] in [\"000823624\"])"
    ]
   },
   {
