--- a/vividbot/data/task/llava_pretrain_refined/test.ipynb
+++ b/vividbot/data/task/llava_pretrain_refined/test.ipynb
@@ -29,45 +29,54 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab039aea6da040428dde667d8bef7108",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Throughput: 3.6992393594616626 records per second\n",
+      "Throughput: 221.95436156769975 records per minute\n"
+     ]
     }
    ],
    "source": [
+    "from time import sleep, time\n",
     "from datasets import load_dataset\n",
     "from pathlib import Path\n",
     "\n",
-    "metadatas = load_dataset(\"json\", data_files=f\"{Path.home()}/data/llava-pretrain/llava_pretrain_vi.jsonl\", split=\"train\")"
+    "start_time = time()\n",
+    "start_count = None\n",
+    "while True:\n",
+    "  metadatas = open(f\"{Path.home()}/data/llava-pretrain/llava_pretrain_vi.jsonl\", \"r\").readlines()\n",
+    "  if start_count is None:\n",
+    "    start_count = len(metadatas)\n",
+    "\n",
+    "  end_time = time()\n",
+    "\n",
+    "  # 10 seconds\n",
+    "  if end_time - start_time >= 60:\n",
+    "    break\n",
+    "  else:\n",
+    "    sleep(60)\n",
+    "\n",
+    "print(f\"Throughput: {(len(metadatas) - start_count) / (end_time - start_time)} records per second\")\n",
+    "# throughput per 1 minute\n",
+    "print(f\"Throughput: {(len(metadatas) - start_count) / (end_time - start_time) * 60} records per minute\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "207549"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "371003\n"
+     ]
     }
    ],
    "source": [
-    "metadatas.num_rows"
+    "print(len(metadatas))"
    ]
   },
   {
@@ -139,6 +148,54 @@
    ],
    "source": [
     "metadatas[0][\"conversations\"][1][\"value\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "ds = open(f\"{Path.home()}/data/llava-pretrain/llava_pretrain_vi.jsonl\").readlines()\n",
+    "\n",
+    "ds = [json.loads(item) for item in ds]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "371246"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# dump ids to file\n",
+    "with open(f\"{Path.home()}/data/llava-pretrain/process_ids.json\", \"w\") as f:\n",
+    "  ids = [item[\"id\"] for item in ds]\n",
+    "  f.write(json.dumps(ids))\n",
+    "    "
    ]
   }
  ],
