--- a/vividbot/data/task/vast_2m_refined/combine.ipynb
+++ b/vividbot/data/task/vast_2m_refined/combine.ipynb
@@ -23,6 +23,34 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "TRANSLATED_METADATA_PATH = f\"{Path.home()}/data/vast-2m/metadata\"\n",
+    "ORIGINAL_METADATA_PATH = f\"{Path.home()}/data/vast-2m/vast_2m_chunk_e\"\n",
+    "TEMP_REFINED_METADATA_PATH = f\"{Path.home()}/data/vast-2m/metadata-refined-temp\"\n",
+    "REFINED_METADATA_PATH = f\"{Path.home()}/data/vast-2m/metadata-refined\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = load_dataset(\"json\", data_files=f\"{Path.home()}/data/vast-2m/metadata-refined-temp/translated-metadata.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -33,16 +61,6 @@
     }
    ],
    "source": [
-    "import json\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "TRANSLATED_METADATA_PATH = f\"{Path.home()}/data/vast-2m/metadata\"\n",
-    "ORIGINAL_METADATA_PATH = f\"{Path.home()}/data/vast-2m/vast_2m_chunk_e\"\n",
-    "TEMP_REFINED_METADATA_PATH = f\"{Path.home()}/data/vast-2m/metadata-refined-temp\"\n",
-    "\n",
     "os.makedirs(TEMP_REFINED_METADATA_PATH, exist_ok=True)\n",
     "\n",
     "for i in tqdm(range(500)):\n",
@@ -114,10 +132,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shard_199: 1240 != 3883\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(500):\n",
+    "  \n",
+    "\n",
+    "  translated_metadata_file = f\"{REFINED_METADATA_PATH}/shard_{i}.jsonl\"\n",
+    "  original_metadata_file = f\"{TEMP_REFINED_METADATA_PATH}/shard_{i}.jsonl\"\n",
+    "\n",
+    "  if not os.path.exists(translated_metadata_file):\n",
+    "    continue\n",
+    "\n",
+    "  translated_metadatas = [json.loads(data) for data in open(translated_metadata_file).readlines()]\n",
+    "\n",
+    "  original_metadatas = [json.loads(data) for data in open(original_metadata_file).readlines()]\n",
+    "\n",
+    "\n",
+    "  if len(translated_metadatas) != len(original_metadatas):\n",
+    "    print(f\"shard_{i}: {len(translated_metadatas)} != {len(original_metadatas)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1922226\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "s = 0\n",
+    "\n",
+    "for i in range(500):\n",
+    "  \n",
+    "\n",
+    "  translated_metadata_file = f\"{REFINED_METADATA_PATH}/shard_{i}.jsonl\"\n",
+    "  original_metadata_file = f\"{TEMP_REFINED_METADATA_PATH}/shard_{i}.jsonl\"\n",
+    "\n",
+    "  if not os.path.exists(translated_metadata_file):\n",
+    "    continue\n",
+    "\n",
+    "  translated_metadatas = [json.loads(data) for data in open(translated_metadata_file).readlines()]\n",
+    "\n",
+    "  s += len(translated_metadatas)\n",
+    "\n",
+    "print(s)"
+   ]
   }
  ],
  "metadata": {
