--- a/vividbot/data/task/vast_2m_refined/combine.ipynb
+++ b/vividbot/data/task/vast_2m_refined/combine.ipynb
@@ -196,6 +196,43 @@
     "\n",
     "print(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "data = open(f\"{Path.home()}/Downloads/shard_109.jsonl\", \"r\").readlines()\n",
+    "\n",
+    "data = [json.loads(d) for d in data][:600]\n",
+    "\n",
+    "with open(f\"{Path.home()}/Downloads/shard_109.json\", \"w\") as f:\n",
+    "  f.write(json.dumps(data, indent=2, ensure_ascii=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3892"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
   }
  ],
  "metadata": {
