add process viet geometry vqa

--- a/vividbot/experiment/datasets/viet_doc_vqa/test.ipynb
+++ b/vividbot/experiment/datasets/viet_doc_vqa/test.ipynb
@@ -477,7 +477,7 @@
     "    else:\n",
     "      conversations[0][\"value\"] = f\"<image>\\n{conversations[0]['value']}\"\n",
     "\n",
-    "    img_ext = \"jpg\" if type(image) is PIL.JpegImagePlugin.JpegImageFile else \"png\"\n",
+    "    img_ext = image.format.lower()\n",
     "\n",
     "    conversation_data.append({\n",
     "      \"id\": id,\n",
