add finetune data

--- a/vividbot/experiment/datasets/vivid_instruct_65k/video/refine.ipynb
+++ b/vividbot/experiment/datasets/vivid_instruct_65k/video/refine.ipynb
@@ -9,12 +9,12 @@
     "import json\n",
     "from pathlib import Path\n",
     "\n",
-    "data = json.load(open(f\"{Path.home()}/data/vivid_video_instruct_125k_all.json\"))"
+    "data = json.load(open(f\"{Path.home()}/data/vivid_video_instruct.json\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +25,11 @@
        " 'conversations': [{'from': 'human',\n",
        "   'value': '<video>\\nMô tả cụ thể các hành động, nhân vật và bối cảnh xuất hiện trong video.'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Video bắt đầu với hình ảnh một phổi được mô tả bằng hình ảnh 3D. Phổi được mô tả với nhiều màu sắc khác nhau. Sau đó, video chuyển sang hình ảnh mô tả cấu trúc của phổi với nhiều túi khí nhỏ.'}]}"
+       "   'value': 'Video bắt đầu với hình ảnh một phổi được mô tả bằng hình ảnh 3D. Phổi được mô tả với nhiều màu sắc khác nhau. Sau đó, video chuyển sang hình ảnh mô tả cấu trúc của phổi với nhiều túi khí nhỏ.'}],\n",
+       " 'path': 'Vividbot/vivid-video-instruct/videos'}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,22 +89,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "125884"
+       "97448"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(sorted_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'RXk4fg4rVY0.7',\n",
+       " 'video': 'shard_57/RXk4fg4rVY0.7.mp4',\n",
+       " 'conversations': [{'from': 'human',\n",
+       "   'value': '<video>\\nĐối tượng và sự kiện trong đoạn video là gì?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Đoạn video bắt đầu với một gia đình gồm bố mẹ và hai con nhỏ đang ngồi trên bờ biển, nhìn về phía mặt trời đang lặn. Sau đó, video chuyển sang hình ảnh một người phụ nữ đang ngồi trên ghế sofa với vẻ mặt buồn bã. Tiếp theo, video hiển thị hai người đang nắm tay nhau với nền là hoàng hôn. Cuối cùng, video kết thúc với một gia đình gồm bố mẹ và con trai đang ngồi trên một chiếc thuyền nhỏ, nhìn về phía mặt trời đang lặn.'},\n",
+       "  {'from': 'human',\n",
+       "   'value': 'Theo video, những cảnh quan và hoàn cảnh nào được thể hiện?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Trong đoạn video, các cảnh quan chính được thể hiện bao gồm: bờ biển với gia đình ngắm mặt trời lặn, người phụ nữ ngồi trên ghế sofa với vẻ mặt buồn bã, hai người đang nắm tay nhau với nền là hoàng hôn, và một gia đình ngồi trên thuyền nhỏ nhìn về phía mặt trời lặn.'},\n",
+       "  {'from': 'human',\n",
+       "   'value': 'Những cảm xúc và trạng thái tâm trạng nào được thể hiện trong video?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Đoạn video thể hiện những cảm xúc và trạng thái tâm trạng như sự bình yên, sự buồn bã, và sự gắn kết gia đình.'}],\n",
+       " 'path': 'Vividbot/vivid-video-instruct/videos'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_data[0]"
    ]
   },
   {
@@ -190,7 +225,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# new_data = []\n",
+    "\n",
+    "# for d in data:\n",
+    "#   d_copy = d.copy()\n",
+    "#   new_conv = []\n",
+    "#   for i in range(0, len(d[\"conversations\"]), 2):\n",
+    "#     conv = d[\"conversations\"][i : i + 2]\n",
+    "#     conv[0][\"value\"] = conv[0][\"value\"].strip()\n",
+    "#     conv[1][\"value\"] = conv[1][\"value\"].strip()\n",
+    "#     if len(conv[1][\"value\"].split(\" \")) > 10:\n",
+    "#       new_conv.extend(conv)\n",
+    "#   if len(new_conv) > 0:\n",
+    "#     d_copy[\"conversations\"] = new_conv[:6]\n",
+    "#     new_data.append(d_copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "new_data = []\n",
+    "superlongs = []\n",
     "\n",
     "for d in data:\n",
     "  d_copy = d.copy()\n",
@@ -199,25 +257,42 @@
     "    conv = d[\"conversations\"][i : i + 2]\n",
     "    conv[0][\"value\"] = conv[0][\"value\"].strip()\n",
     "    conv[1][\"value\"] = conv[1][\"value\"].strip()\n",
-    "    if len(conv[1][\"value\"].split(\" \")) > 10:\n",
+    "    if (\n",
+    "      len(conv[1][\"value\"].split(\" \")) > 10\n",
+    "      and len(conv[1][\"value\"].split(\" \")) < 120\n",
+    "      and len(conv[0][\"value\"].split(\" \")) > 3\n",
+    "      and len(conv[0][\"value\"].split(\" \")) < 60\n",
+    "    ):\n",
     "      new_conv.extend(conv)\n",
     "  if len(new_conv) > 0:\n",
-    "    d_copy[\"conversations\"] = new_conv[:6]\n",
+    "    d_copy[\"conversations\"] = []\n",
+    "    total_word_count = 0\n",
+    "    for i in range(0, len(new_conv), 2):\n",
+    "      try:\n",
+    "        total_word_count += total_word_count + len(new_conv[i][\"value\"].split(\" \"))\n",
+    "        if total_word_count < 1200:\n",
+    "          d_copy[\"conversations\"].extend(new_conv[i : i + 2])\n",
+    "        else:\n",
+    "          superlongs.append(d)\n",
+    "          break\n",
+    "        total_word_count += len(new_conv[i + 1][\"value\"].split(\" \"))\n",
+    "      except:\n",
+    "        pass\n",
     "    new_data.append(d_copy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "121054"
+       "97448"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,39 +303,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 'z3X29hqSTGQ.8',\n",
-       " 'video': 'shard_99/z3X29hqSTGQ.8.mp4',\n",
+       "{'id': '01gE8ErrcJ4.0',\n",
+       " 'video': 'shard_0/01gE8ErrcJ4.0.mp4',\n",
        " 'conversations': [{'from': 'human',\n",
-       "   'value': 'Video bắt đầu bằng hình ảnh gì?\\n<video>'},\n",
+       "   'value': '<video>\\nMô tả cụ thể các hành động, nhân vật và bối cảnh xuất hiện trong video.'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Video bắt đầu bằng hình ảnh một nhà máy nhiệt điện với những cột khói cao ngất, bao phủ bầu trời trong làn khói mờ ảo.'},\n",
-       "  {'from': 'human',\n",
-       "   'value': 'Tác động của năng lượng than đá đến môi trường là gì?'},\n",
-       "  {'from': 'gpt',\n",
-       "   'value': 'Không được đề cập trực tiếp trong video, nhưng hình ảnh khói mờ ảo bao phủ bầu trời ngụ ý tác động tiêu cực đến môi trường.'},\n",
-       "  {'from': 'human', 'value': 'Video kết thúc bằng hình ảnh gì?'},\n",
-       "  {'from': 'gpt',\n",
-       "   'value': 'Video kết thúc bằng hình ảnh một thành phố hiện đại với những tòa nhà cao tầng và dòng sông êm đềm.'}]}"
+       "   'value': 'Video bắt đầu với hình ảnh một phổi được mô tả bằng hình ảnh 3D. Phổi được mô tả với nhiều màu sắc khác nhau. Sau đó, video chuyển sang hình ảnh mô tả cấu trúc của phổi với nhiều túi khí nhỏ.'}]}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_data[1]"
+    "new_data[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,27 +346,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': '1uzz3-v_OtE.5',\n",
-       " 'video': 'shard_47/1uzz3-v_OtE.5.mp4',\n",
+       "{'id': 'RXk4fg4rVY0.7',\n",
+       " 'video': 'shard_57/RXk4fg4rVY0.7.mp4',\n",
        " 'conversations': [{'from': 'human',\n",
-       "   'value': '<video>\\nNội dung của video là gì?'},\n",
+       "   'value': '<video>\\nĐối tượng và sự kiện trong đoạn video là gì?'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Video bắt đầu với hình ảnh một nhân vật nữ trong game đang đứng trước một cái bàn, sau đó chuyển sang hình ảnh một thành phố với một đài phun nước ở giữa. Tiếp theo là hình ảnh một nhân vật nữ trong game đang đi trên một con đường, rồi đến hình ảnh nhân vật nữ đó đang chiến đấu với một đàn chim. Cuối cùng, video còn hiển thị các hình ảnh khác như một ứng dụng game trên điện thoại, một người đàn ông ném vật thể vào thùng rác, một túi rác có vật thể màu vàng bên trong, một nhân vật nữ trong game với chiếc mũ hề, một bức tranh biếm họa, hai phụ nữ trẻ nói chuyện trước máy quay, và một meme với một người đàn ông đầu trọc mặc đồng phục cảnh sát.'},\n",
-       "  {'from': 'human', 'value': 'Trong video, có những đối tượng chính nào?'},\n",
+       "   'value': 'Đoạn video bắt đầu với một gia đình gồm bố mẹ và hai con nhỏ đang ngồi trên bờ biển, nhìn về phía mặt trời đang lặn. Sau đó, video chuyển sang hình ảnh một người phụ nữ đang ngồi trên ghế sofa với vẻ mặt buồn bã. Tiếp theo, video hiển thị hai người đang nắm tay nhau với nền là hoàng hôn. Cuối cùng, video kết thúc với một gia đình gồm bố mẹ và con trai đang ngồi trên một chiếc thuyền nhỏ, nhìn về phía mặt trời đang lặn.'},\n",
+       "  {'from': 'human',\n",
+       "   'value': 'Theo video, những cảnh quan và hoàn cảnh nào được thể hiện?'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Các đối tượng chính trong video bao gồm một nhân vật nữ trong game, một thành phố với đài phun nước, một đàn chim, một ứng dụng game trên điện thoại, một người đàn ông ném vật thể vào thùng rác, một túi rác có vật thể màu vàng bên trong, một nhân vật nữ trong game với chiếc mũ hề, một bức tranh biếm họa, hai phụ nữ trẻ nói chuyện trước máy quay, và một meme với một người đàn ông đầu trọc mặc đồng phục cảnh sát.'},\n",
-       "  {'from': 'human', 'value': 'Vật thể màu vàng trong túi rác là gì?'},\n",
+       "   'value': 'Trong đoạn video, các cảnh quan chính được thể hiện bao gồm: bờ biển với gia đình ngắm mặt trời lặn, người phụ nữ ngồi trên ghế sofa với vẻ mặt buồn bã, hai người đang nắm tay nhau với nền là hoàng hôn, và một gia đình ngồi trên thuyền nhỏ nhìn về phía mặt trời lặn.'},\n",
+       "  {'from': 'human',\n",
+       "   'value': 'Những cảm xúc và trạng thái tâm trạng nào được thể hiện trong video?'},\n",
        "  {'from': 'gpt',\n",
-       "   'value': 'Video không cung cấp thông tin cụ thể về vật thể màu vàng bên trong túi rác, nhưng ta có thể đoán đó có thể là một vật dụng hoặc đồ vật nào đó.'}]}"
+       "   'value': 'Đoạn video thể hiện những cảm xúc và trạng thái tâm trạng như sự bình yên, sự buồn bã, và sự gắn kết gia đình.'}],\n",
+       " 'path': 'Vividbot/vivid-video-instruct/videos'}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,16 +384,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data = [\n",
-    "  {**x, \"conversations\": x[\"conversations\"][:6]}\n",
-    "  for x in sorted_data\n",
-    "  if len(x[\"conversations\"][1][\"value\"].split(\" \")) > 10\n",
-    "]"
+    "# new_data = [\n",
+    "#   {**x, \"path\": \"\"}\n",
+    "#   for x in sorted_new_data\n",
+    "#   if len(x[\"conversations\"][1][\"value\"].split(\" \")) > 10\n",
+    "# ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "121054"
+       "97448"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,13 +422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"{Path.home()}/data/vivid_video_instruct_121k_all.json\", \"w\") as f:\n",
+    "new_data = [{**d, \"path\": \"Vividbot/vivid-video-instruct/videos\"} for d in new_data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"{Path.home()}/data/vivid_video_instruct.json\", \"w\") as f:\n",
     "  json.dump(new_data, f, indent=2, ensure_ascii=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -417,10 +504,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "d2 = json.load(open(f\"{Path.home()}/data/vivid_video_instruct.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97448"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'z3X29hqSTGQ.9',\n",
+       " 'video': 'shard_99/z3X29hqSTGQ.9.mp4',\n",
+       " 'conversations': [{'from': 'human',\n",
+       "   'value': 'Khi nào vụ tấn công tượng đài xảy ra?'},\n",
+       "  {'from': 'gpt',\n",
+       "   'value': 'Khoảng 3 giờ sáng ngày 10 tháng 6 theo giờ địa phương'}],\n",
+       " 'path': 'Vividbot/vivid-video-instruct/videos'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2[-1]"
+   ]
   }
  ],
  "metadata": {
